--- a/assets/css/jekyll-theme-chirpy.scss
+++ b/assets/css/jekyll-theme-chirpy.scss
@@ -9,7 +9,7 @@
 
 /* append your custom style below */
 body {
-  font-family: "Comic Sans MS", "Comic Sans", cursive !important;
+  font-family: "Comic Sans MS", "Comic Sans" !important;
 }
 
 body {
